# rdbms-inspection

./: LICENSE  Makefile  README.md  application.py  cli.py  example.py  init.sql  items.sql  models.py  my.cnf  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: py-ci.yaml
libs/db/: mysql.py
libs/db/adapter/: pymysql.py
tests/: test_models.py
