[tool.poetry]
name = "rdbms-inspection"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.0.3"
SQLAlchemy = "^1.4.25"
click = "^8.0.1"
pydantic = "^1.8.2"
aiosql = "^3.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.10b0"
isort = "^5.9.3"
pyproject-flake8 = "^0.0.1a2"
pytest-asyncio = "^0.16.0"
Faker = "^9.8.0"
ward = "^0.65.0-beta.0"


[tool.black]
line-length = 79
max-complexity = 10

[tool.mypy]
files = "app/**/*.py"
ignore_missing_imports = true

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
use_parentheses = true

[tool.flake8]
max-complexity = 10

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.ward]
path = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
